--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,28 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer{
+  display: flex;
+  justify-content: center;
+}
+
+.value {
+  font-size: 75px;
+}
+
+.label {
+  font-size: 19px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.field:not(:last-child) {
+  margin-right: 30px;
+}
